--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     </div>
     <div data-aos="fade-right" data-aos-delay="300" data-aos-duration="600" class="phase">
       
-      <dotlottie-player class="phase-img" src="https://lottie.host/a9538512-a396-4042-9dc3-3203415472eb/zvSLnkGUK8.json" background="transparent" speed="1" style="width: 300px; height: 300px" direction="1" mode="normal" loop autoplay></dotlottie-player>
+      <img class="phase-img" src="https://yt3.googleusercontent.com/AATZ85V6Pgj_fgXPu-s_CHlZ4KnkXr71CxLvwVHfT0Vz2ymia6QelS_Wp41sAr_po69JRHwaZQ=s176-c-k-c0x00ffffff-no-rj" />
+      
       <div class="phase-text">
         <p class="phase-id">PHASE 3</p>
         <p class="phase-name">Hackathon</p>
