--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="nav-buttons">
-        <a href="https://rookieprogrammersachin.github.io/lyncfest-main" class="nav-btn">AstroFiesta</a>
+        <a href="#" class="nav-btn">AstroFiesta</a>
         <a href="#schedule" class="nav-btn">Schedule</a>
        
         <a href="#" class="nav-btn">Guidelines</a>
