--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>AstroFiesta</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Hack In Hub"/>
+  <meta name="description" content="AstroFiesta"/>
   <link rel="icon" type="image/png" sizes="16x16" href="src/favicon.ico">
   <link href="components/CSS/navbar.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
